broken insideStatic but fixed red

--- a/force-app/main/default/lwc/insideStatic/insideStatic.css
+++ b/force-app/main/default/lwc/insideStatic/insideStatic.css
@@ -1,16 +1,36 @@
-.car-icon {
-    --sds-c-icon-color-foreground-default: rgb(150, 12, 12);
-    margin-top: 25%;
-    margin-left: 35%;
-    margin-right: 5px;
+.car-icon{
+    --sds-c-icon-color-foreground-default: rgb(72, 12, 150);
     
 }
 
 .red{
-    position: absolute;;
-    left:15%;
-    top:-5%;
+    height: 40%;
     width: 50%;
-    height: 44%;
-    z-index: 0;
+    margin-top: -5%;
+    margin-left: 40%;
+   
+    
+}
+.container{
+    position: relative;
+}
+
+.in{
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+}
+
+.inn{
+    position: absolute;
+    top:85%;
+    width: 100%;
+    left: 45%;
+
+}
+
+.media{
+    width: 60%;
 }
